required changes for users to migrate from one version of MapServer to the
next.  Developers are strongly encouraged to document their changes and
their impacts on the users here.  (Please add the most recent changes to 
the top of the list.)

For a complete change history, please see the Subversion log comments.


Current Version (SVN trunk):
----------------------------

- fix problem with 0-length line patterns in AGG

- Fixed problem of text/html WMS GetFeatureInfo which was returning HTML 
  image map output instead of the expected text/html template output.
  This was done by changing the imagemap outputformat to use the 
  "text/html; driver=imagemap" mime type (#3024)

- more resolution fixes for resolution scaling (symbolscale case) (#3157)

- Make sure layer extents are saved when a mapfile is written (#2969)

- Fixed CurvePolygons from oracle not drawn (#2772)

- Fixed raster queries (broken by RFC 52 changes) (#3166)

- Fixed coordinate projection problem in some cases with WMS GetFeatureInfo
  output in GML2 format (#2989)

- Added resolution scaling of some properties for GD driver (#3157)

- Modified GD functions API to be consistent with all others drivers (#3157)

- OGC Filter: strip all namespaces (not only ogc, gml) (#1350)

- Use decimal values for size and width in SVG output format (#2835)

- Correct invalid test when loading movies in an swf ouput (#2524)

- Return WMS GetCapabilities v1.3.0 by default as required by spec (#3169)

- Fixed mapObj.zoomScale() and mapobj.zoomRectangle() scaling problem in
  Mapscript (#3131)

- Few more fixes for high res output (#3157)

- Allow "DRIVER 'TEMPLATE'" or "DRIVER TEMPLATE" in output formats

- Correct sld generated from mapserver classes (#3133) 

- Correct libjpeg v7 compatability issue in old jpeg interface code (#3167)

- Correct FEATURE_COUNT limits on WMS GetFeatureInfo raster queries (#3168)

- Correct SCALE_BUCKETS issue with 16bit raster scaling (#3174)


Version 5.6.0-beta3 (2009-10-07):